# zxgk_court

./: .gitignore  CLAUDE.md  README.md  examples_config_validation.py  index.html  main.py  pyproject.toml  requirements.txt  version.py
.claude/: settings.local.json
config/: config.yaml  zxgk.yaml
docs/: PROJECT_SUMMARY.md  开发指南-添加新模块.md  需求流程.md
scripts/: lint.sh
src/core/: automation_engine.py  config_manager.py  schemas.py
src/tasks/: base_task.py
src/tasks/common/: retry_manager.py  step_executor.py
src/tasks/zxgk/: __init__.py  config.py  task.py
src/tasks/zxgk/handlers/: __init__.py  captcha_handler.py  excel_handler.py  form_handler.py  navigation_handler.py
src/ui/: gui.py
src/ui/components/: log_viewer.py
src/utils/: browser_checker.py  exceptions.py  helpers.py  logger.py
templates/: excel模板.xls
tests/: test_automation_engine.py  test_config_manager.py  test_schemas.py
